# remote-timer

./: .gitignore  CLAUDE.md  Readme.md  package.json  pnpm-lock.yaml  turbo.json
apps/timer-api/: .dockerignore  Cargo.toml  Dockerfile  fly.toml  package.json
apps/timer-api/src/: config.rs  errors.rs  handler.rs  lib.rs  main.rs  message_handler.rs  server.rs  test_utils.rs  time.rs  timer.rs  transport.rs
apps/timer-web/: .env.example  package.json
apps/timer-web/src/lib/: presets.svelte.ts  time.ts  timerService.svelte.ts
apps/timer-web/src/lib/components/: Box.svelte  Button.svelte  ConnectionBadge.svelte  ConnectionStatusBar.svelte  Modal.svelte  TimeInput.svelte
apps/timer-web/src/routes/: +layout.server.ts  +page.svelte
apps/timer-web/src/routes/[timerId]/: +layout.svelte  +page.svelte  timerService.svelte.ts
apps/timer-web/src/routes/[timerId]/display/: +page.svelte
