[package]
name = "timer-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.12.1"
actix-ws = { version = "0.3.0" }
anyhow = "1.0.100"
futures-util = { version = "0.3.31" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.43"
tracing-subscriber = "0.3.22"
uuid = { version = "1.19.0", features = ["v4", "serde"] }
tokio-stream = "0.1.17"
